compiler/typ/tests/fixtures/diagnostics/0058_core_match_branch_mismatch_05.ml
let _ =
  match true with
  | true -> 4
  | false -> false
